--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -22,5 +22,19 @@ jobs:
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
-          APIFY_TOKEN:  ${{ secrets.APIFY_TOKEN }}
+          APIFY_TOKEN: ${{ secrets.APIFY_TOKEN }}
+          FIRECRAWL_API_KEY: ${{ secrets.FIRECRAWL_API_KEY }}
         run: python scrapers/main.py
+
+      - name: Update GitHub Pages
+        if: github.ref == 'refs/heads/main'
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git checkout gh-pages
+          git checkout main -- dashboard/index.html
+          mv dashboard/index.html .
+          git rm -rf dashboard || true
+          git add index.html
+          git commit -m "Update dashboard with latest changes" || echo "No changes to commit"
+          git push origin gh-pages
