Add Tableau scraper for Privacy Rights Clearinghouse

--- a/scrapers/config.yaml
+++ b/scrapers/config.yaml
@@ -99,6 +99,6 @@ texas:
   schedule: "0 * * * *"
 
 privacy_rights:
-  type: firecrawl
+  type: tableau
   url: "https://privacyrights.org/data-breaches"
   schedule: "*/30 * * * *"
