--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -14,9 +14,14 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with: {python-version: '3.11'}
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18'
 
       - name: Install deps
-        run: pip install -r scrapers/requirements.txt
+        run: |
+          pip install -r scrapers/requirements.txt
+          npm install puppeteer
 
       - name: Scrape & ingest
         env:
